<resources>
    <string name="intro_next">Next</string>
    <string name="intro_get_started">Get Started</string>
    <string name="login_welcome_to_app">Welcome to %s</string>
    <string name="login_login">Login</string>
    <string name="login_login_to_your_account">Login to your account</string>
    <string name="login_email">Email</string>
    <string name="login_mobile">Mobile Number</string>
    <string name="login_forgot_your_password">Forgot your password?</string>
    <string name="login_dont_have_an_account">Don"'"t have an account?</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_password">Password</string>
    <string name="login_required">Required</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google</string>
    <string name="login_or">OR</string>
    <string name="login_to_continue">Log in to continue</string>
    <string name="login_no_user_found">No User Found</string>
    <string name="login_invalid_credentials">Invalid Credentials</string>
    <string name="login_alert_message_select_country">Please select country</string>
    <string name="signup_welcome_to_message">Welcome to %s</string>
    <string name="signup_mobile">Mobile Number</string>
    <string name="signup_password">Password</string>
    <string name="signup_already_have_an_account">Already have an account?</string>
    <string name="signup_create">Create</string>
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_re_enter_password">Re-enter Password</string>
    <string name="signup_agree_terms_and_conditions">Agree to <b>Terms &amp; Conditions</b></string>
    <string name="signup_create_your_account">Create your account</string>
    <string name="signup_required">Required</string>
    <string name="signup_invalid_email">Invalid Email</string>
    <string name="signup_password_mismatch">Password mismatch</string>
    <string name="signup_min_password_validation">Password must contains atleast 6 characters</string>
    <string name="signup_user_already_registered">User already registered.</string>
    <string name="signup_alert_message_select_country">Please select country</string>
    <string name="signup_accept_terms_condition">Please Accept Terms &amp; condition</string>
    <string name="otp_email_verification">Email Verification</string>
    <string name="otp_phone_verification">Phone Verification</string>
    <string name="otp_enter_verification_code_here">Enter verification code here</string>
    <string name="otp_did_not_receive_code">Didn\'t receive a code?</string>
    <string name="otp_resend_code">Resend Code</string>
    <string name="otp_verify">Verify</string>
    <string name="otp_otp_verifying">Otp verifying</string>
    <string name="otp_please_enter_otp">Please enter otp</string>
    <string name="otp_sent_to">+%s %s</string>
    <string name="otp_invalid_otp">Invalid otp code</string>
    <string name="otp_expired">Otp expired</string>
    <string name="otp_resend_message">Otp code has been sent Successfully</string>
    <string name="opt_could_not_set_password">Something went wrong. Couldn\'t able to set password at the moment.Try again later</string>
    <string name="otp_password_changed_success_msg">Password has been changed successfully</string>
    <string name="otp_otp_send_info">Please enter OTP here, we\'ve sent \n verification code to %s</string>
    <string name="splash_welcome_to_message">Welcome to %s</string>
    <string name="splash_required">Required</string>
    <string name="splash_enter_your_tenantId">Enter your Tenant ID</string>
    <string name="splash_submit">Submit</string>
    <string name="splash_tenant_id">Tenant ID</string>
    <string name="splash_change_tenant">Change Tenant</string>
    <string name="splash_invalid_tenant_id">Invalid Tenant ID</string>
    <string name="forgotpassword_email">Email</string>
    <string name="forgotpassword_mobile">Mobile Number</string>
    <string name="forgotpassword_alert_message_select_country">Please select country</string>
    <string name="forgotpassword_forgot_your_password">Forgot your password?</string>
    <string name="forgotpassword_enter_your_mobile_number">Enter your Mobile number</string>
    <string name="forgotpassword_enter_your_email">Enter your Email</string>
    <string name="forgotpassword_password_mismatch">Password mismatch</string>
    <string name="forgotpassword_invalid_email">Invalid Email</string>
    <string name="forgotpassword_required">Required</string>
    <string name="forgotpassword_verification_password">Verification Code</string>
    <string name="forgotpassword_verify">Verify</string>
    <string name="forgotpassword_otp_send_info">Please enter OTP here, we\'ve sent \n verification code to %s</string>
    <string name="forgotpassword_new_password">New Password</string>
    <string name="forgotpassword_confirm_new_password">Confirm New Password</string>
    <string name="search_search">Search</string>
    <string name="search_stores">Stores</string>
    <string name="search_header_title">What are you looking for?</string>
    <string name="search_type_to_search">Type to Search</string>
    <string name="search_sort_by">Sort by</string>
    <string name="search_search_by">Search By</string>
    <string name="search_filter_by_distace">Filter by Distance</string>
    <string name="search_location">Location</string>
    <string name="search_category">Category</string>
    <string name="search_search_a_product">Search a product</string>
    <string name="search_search_a_store">Search a store</string>
    <string name="search_listings">Listings</string>
    <string name="search_no_result_found">No result found</string>
    <string name="search_low_to_high">Price &#8212; Low to High</string>
    <string name="search_high_to_low">Price &#8212; High to Low</string>
    <string name="search_relevance">Recent</string>
    <string name="notification_header_title">Notifications</string>
    <string name="notification_no_notification_at_the_moment">No notifications at the moment</string>
    <string name="notification_order_placed_success">Congrats, your order has been placed successfully</string>
    <string name="notification_order_cancelled">Your order has been cancelled</string>
    <string name="notification_order_return_initiated">Your order return process initiated</string>
    <string name="notification_order_is_in_progress">Your order is in Progress</string>
    <string name="notification_order_shipped">Your order has been shipped</string>
    <string name="notification_order_deliver_returned">Order Delivery returned</string>
    <string name="notification_order_delivery_return_confrmed">Order Delivery return confirmed</string>
    <string name="notification_order_order_delivered">Your order has been delivered successfully</string>
    <string name="notification_order_picked_up">Your order has been picked up by courier partner</string>
    <string name="notification_order_out_for_delivery">Your order is out for Delivery</string>
    <string name="notification_order_customer_return_confirmed">Order return confirmed</string>
    <string name="notification_order_customer_return_disputed">Order return disputed</string>
    <string name="notification_order_customer_unreachable">Customer unreachable</string>
    <string name="notification_started_following_your_account">%s started following your account %s</string>
    <string name="notification_liked_your_listing">%s liked your listing</string>
    <string name="notification_chat_message_fallback">Sent you a message</string>
    <string name="notification_chat_listing_fallback">Sent you a listing</string>
    <string name="notification_chat_image_fallback">Sent you a photo</string>
    <string name="notification_chat_file_fallback">Sent you a file</string>
    <string name="notification_notification_approved_fallback">Your recent listing has been approved and ready for sale.</string>
    <string name="notification_rejected_fallback">Your recent listing has been rejected for quality reasons.</string>
    <string name="notification_liked_fallback">%s liked your listing</string>
    <string name="notification_followed_fallback">%s following you</string>
    <string name="notification_order_title">Order#&#160;%s</string>
    <string name="notification_order_change_fallback">Your order status has been changed to %s</string>
    <string name="notification_new_order_fallback">Your have got a new order</string>
    <string name="cart_required">Required</string>
    <string name="cart_header_title">My Cart</string>
    <string name="cart_remove">Remove</string>
    <string name="cart_some_items_removed">Some of your items may be removed</string>
    <string name="cart_cancel">Cancel</string>
    <string name="cart_item_removed_cart">Item removed from cart</string>
    <string name="cart_item_added_cart">Item added to cart</string>
    <string name="cart_max_quantity">Max Quantity %s</string>
    <string name="cart_apply">Apply</string>
    <string name="cart_enter_quantity">Enter Quantity</string>
    <string name="cart_your_cart_is_empty">Your cart is empty!</string>
    <string name="cart_more">More</string>
    <string name="cart_shipment">Shipment</string>
    <string name="cart_qty">Qty:</string>
    <string name="cart_shop_now">Shop now</string>
    <string name="cart_alert_stock_not_available">Stocks not available for selected Quantity</string>
    <string name="cart_invalid_qty">Invalid quantity</string>
    <string name="cart_alert_message_cart_clear_failed">Couldn\'t able to clear cart at the moment. Try again</string>
    <string name="cart_alert_message_min_balance_checkout">Your total cart amount should be more than %s to proceed wit this order.</string>
    <string name="cart_could_not_delete_cart_item">Something went wrong. Couldn"'t" able to remove cart item at the  moment.Try again later</string>
    <string-array name="cart_qty_min">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>@string/cart_more</item>
        <item>default</item>
    </string-array>
    <string name="wishlist_header_title">Wishlist</string>
    <string name="wishlist_continue_wish_list">Continue Shopping</string>
    <string name="wishlist_item_added_to_wish_list">Item added to Wishlist</string>
    <string name="wishlist_item_deleted_to_wish_list">Item deleted from Wishlist</string>
    <string name="wishlist_login_to_continue">Log in to continue</string>
    <string name="payment_continue_shopping">Continue Shopping</string>
    <string name="payment_price_details">Price details</string>
    <string name="payment_price">Price(%s item)</string>
    <string name="payment_prices">Price(%s items)</string>
    <string name="payment_total_amount">Total Amount</string>
    <string name="payment_header_title">Payment</string>
    <string name="payment_order">Order</string>
    <string name="payment_not_able_to_checkout_msg">Sorry.Couldn\'t able to checkout at the moment.Try again later</string>
    <string name="payment_select_delivery_address">Please Select Delivery Address</string>
    <string name="payment_select_payment">Please Select Payment</string>
    <string name="payment_order_successfully_placed">Your Order has been placed \n successfully</string>
    <string name="storedetail_block">Block</string>
    <string name="storedetail_unblock">Unblock</string>
    <string name="group_header_title">Add Group</string>
    <string name="chatdetail_send">Send</string>
    <string name="product_edit">Edit</string>
    <string name="product_delete">Delete</string>
    <string name="feedback_attachment">Attachment</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
</resources>